# Continual-Learning

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: smoke.yaml  split_cifar10_headline.yaml  split_mnist.yaml  split_mnist_quick.yaml
configs/method/: car.yaml
configs/model/: frozen_dinov2.yaml  resnet18_cifar.yaml
configs/paper/: split_cifar100_full.yaml  split_cifar10_full.yaml  split_tinyimagenet.yaml
docs/: BENCHMARK_CARD.md
docs/assets/split_cifar10_headline/: README.md  leaderboard.csv  summary.json
docs/paper/: README.md  claims_table.md  experiment_status.md  full_suite_commands.sh  manuscript.tex  related_work.md  reproducibility_checklist.md
docs/paper/assets/cifar10/: README.md  claims_table.md  confidence_intervals.json  leaderboard.csv  leaderboard_table.tex  per_seed_results.csv  run_manifest.json  summary.json
experiments/: split_mnist_comparison.ipynb
scripts/: prepare_tinyimagenet.py  run_paper_suite.py
src/: main.py
src/cl_bench/: __init__.py  __main__.py  cli.py  config.py  datasets.py  experiments.py  metrics.py  models.py  reporting.py  tracking.py
src/cl_bench/strategies/: __init__.py  agem.py  base.py  baseline.py  car.py  derpp.py  er_ace.py  ewc.py  gdumb.py  joint.py  lwf.py  replay.py
src/methods/: lwf.py  replay.py
tests/: test_cli.py  test_config.py  test_datasets.py  test_integration_smoke.py  test_metrics.py  test_replay.py  test_reporting.py  test_strategies.py  test_tracking.py
