[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "continual-learning-bench"
version = "0.4.0"
description = "A PyTorch benchmark framework for reproducible continual-learning experiments."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "License" }
authors = [{ name = "Utkarsh Rajput" }]
keywords = ["continual-learning", "pytorch", "benchmark", "machine-learning"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=2.0",
  "pyyaml>=6.0.3",
  "torch>=2.6",
  "torchvision>=0.21",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.3",
  "pytest-cov>=6.2",
  "ruff>=0.12",
]
experiment = [
  "hydra-core>=1.3.2",
  "mlflow>=3.12,<4",
  "omegaconf>=2.3",
  "optuna>=4.0",
  "pandas>=2.2",
]
report = [
  "matplotlib>=3.10",
]

[project.scripts]
cl-bench = "cl_bench.cli:main"

[project.urls]
Homepage = "https://github.com/1Utkarsh1/Continual-Learning"
Repository = "https://github.com/1Utkarsh1/Continual-Learning"

[tool.hatch.build.targets.wheel]
packages = ["src/cl_bench"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.coverage.run]
branch = true
source = ["cl_bench"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
